Horizontal scroll fixed

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
     font-size: 18px;
     line-height: 20px;
     color: #555;
+    overflow-x: hidden;
     /* #008edb;*/
 }
 a{
